deployments/staging/authorization-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: authorization
  labels:
    app: authorization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization
  template:
    metadata:
      labels:
        app: authorization
    spec:
      containers:
        - env:
            - name: RPC_USERS_HOST
              value: users.default.svc
            - name: NATS_HOST
              value: nats
            - name: NATS_PORT
              value: "4222"
          image: pepeunlimited/authorization:0.1
          name: authorization
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
