deployments/staging/authorization-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: authorization-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.staging.pepenulimited.com
      http:
        paths:
          - backend:
              serviceName: authorization
              servicePort: 8000
            path: /sign-in
